fixed to-do list button not aligning in about page. hopefully this is the final commit before presenting. edit by melvin

--- a/assets/css/sassstyle.css
+++ b/assets/css/sassstyle.css
@@ -164,4 +164,9 @@ body {
   display: inline !important;
   color: black;
 }
+
+.done{
+  text-decoration: line-through;
+  opacity:0.5;
+}
 /*# sourceMappingURL=sassstyle.css.map */
